# Climate_Scenario_HIS_Project

./: .gitignore  CSV_to_JSON.py  README.md  SETUP_GUIDE.md  app.py  apply_migration.py  classify_variables.py  confirm_selection.json  extract.ipynb  ngfs-extraction.ipynb  package-lock.json  package.json  pyproject.toml  represent.ipynb  reproduce_issue.py  requirements.txt  setup.sh  start.sh  start_backend.sh  start_frontend.sh  test_payload.json  vercel.json
.ipynb_checkpoints/: ngfs-extraction-checkpoint.ipynb  region_mapping-checkpoint.ipynb
Chatbot/: CHANGES_OVERVIEW.txt  GEMINI_IMPLEMENTATION_COMPLETE.txt  IMPROVEMENTS_SUMMARY.txt  ISO_regions.txt  README.md  RETRIEVER_UPDATE_COMPLETE.txt  SCENARIO_FIX_SUMMARY.txt  app.py  cli_bot.py  confirmed_selection.json  fetch_and_plot_from_tabular.py  generated_series.json  ingestion.py  inspect_index.py  metadata.json  plotter.py  rag_model.py  retriever.py  streamlit_app.py  tabular_ingest.py  test_rag_improvements.py
Data_processing/: extract.ipynb  represent.ipynb
Datasets/: config.ini.enc  config_decryptor.py  encrypt_config.py  ipcc-scenarios_kaggle.csv  load_config.py  postgress_insertion.py  region_mapping.ipynb  region_mapping.py  wide_to_long_csv.py
UI/: package-lock.json  package.json  tailwind.config.js
backend/: app.py  chat_service.py  matching.py  recommendation_service.py  server.py  suggestions.py
bot/: utils.py
climate_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/: README.md
etl/: build_catalog.py  etl.py  scenario_runner.py
manifests/: iiasa_ssp_v2023_OECD_ENV-Growth_2023_SSP1_GDP_World_2020_2050_manifest.json  iiasa_ssp_v2023_REMIND_AR6_Population_World_2020_2050_manifest.json  iiasa_ssp_v2023_REMIND_SSP2_Population_World_2020_2050_manifest.json  iiasa_ssp_v2023_REMIND_SSP5_Population_World_2020_2050_manifest.json
output/: iiasa_ssp_v2023_manifest_20251129_205046.json  iiasa_ssp_v2023_manifest_20251212_234140.json  ipcc_ar6_manifest_20251129_232457.json
rag_index/: docs.parquet  meta.json
src/: App.js
(+125 files in other folders)
